<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigationMyDairy">

    <fragment
        android:id="@+id/navigationMyDairy"
        android:name="al.bruno.fruit.diary.ui.my.diary.MyDiaryFragment"
        android:label="@string/title_my_dairy"
        tools:layout="@layout/fragment_my_dairy" >
        <action
            android:id="@+id/action_navigation_my_dairy_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigationAbout"
        android:name="al.bruno.fruit.diary.ui.about.AboutFragment"
        android:label="@string/title_about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/detailFragment"
        android:name="al.bruno.fruit.diary.ui.detail.DetailFragment"
        android:label="@string/title_details"
        tools:layout="@layout/fragment_details" >
        <action
            android:id="@+id/action_detailFragment_to_addFruitFragment"
            app:destination="@id/addFruitFragment" />
    </fragment>
    <fragment
        android:id="@+id/addFruitFragment"
        android:name="al.bruno.fruit.diary.ui.add.AddFruitFragment"
        android:label="@string/title_add_fruit"
        tools:layout="@layout/fragment_add_fruit" >
        <action
            android:id="@+id/action_addFruitFragment_to_addFruitDialog"
            app:destination="@id/addFruitDialog" />
        <action
            android:id="@+id/action_addFruitFragment_to_navigationMyDairy"
            app:popUpTo="@+id/nav_host_fragment"
            app:destination="@id/navigationMyDairy"
            app:launchSingleTop="true"
            app:popUpToInclusive="true" />
    </fragment>

    <dialog
        android:id="@+id/addFruitDialog"
        android:name="al.bruno.fruit.diary.ui.add.AddFruitDialog"
        tools:layout="@layout/dialog_add_fruit"/>
</navigation>